# opengl

./: .gitignore  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: CMakeLists.txt  HelloRectangle.cpp  firstwindow.cpp  helloTriangle.cpp  main.cpp  multicolorTriangle.cpp  twoTraingles.cpp
source/utilities/: CMakeLists.txt  Shader.h
